fix: z-index adjusting; no loading of new pokemon during spinner is spinning

--- a/styles/assets.css
+++ b/styles/assets.css
@@ -178,7 +178,7 @@ body.modal-open {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 12;
+  z-index: 16;
 }
 
 .loading-overlay.d-none {
